feat: configure eslint & prettier

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Robb-e OAuth2 PKCE Demo</title>
-</head>
-<body>
-  <h1>Robb-e OAuth2 Demo 🌐</h1>
-  <button id="login-btn">Log in with Robb-e</button>
-  <pre id="output"></pre>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Robb-e OAuth2 PKCE Demo</title>
+  </head>
+  <body>
+    <h1>Robb-e OAuth2 Demo 🌐</h1>
+    <button id="login-btn">Log in with Robb-e</button>
+    <pre id="output"></pre>
 
-  <script src="main.js"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
