fix: module and html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Robb-e OAuth2 PKCE Demo</title>
+    <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/build/sha256.min.js"></script>
   </head>
   <body>
-    <h1>Robb-e OAuth2 Demo 🌐</h1>
+    <h1>Robb-e OAuth2 Demo</h1>
     <button id="login-btn">Log in with Robb-e</button>
     <pre id="output"></pre>
-
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
