feat: add error page with clear cookie button

--- a/src/frontend/result.html
+++ b/src/frontend/result.html
@@ -162,7 +162,7 @@
 
       document.getElementById('logout-btn').onclick = () => {
         sessionStorage.clear();
-        window.location.href = '/logout';
+        window.location.href = '/clear-cookies';
       };
     </script>
   </body>
