feat: call protected api with access token after auth

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,6 @@
       <a class="button" href="/user">🔐 User Flow</a>
       <a class="button" href="/m2m">🤖 M2M Flow</a>
     </div>
-    <footer>OAuth 2.0 | PKCE | Client Credentials</footer>
+    <footer>OAuth 2.0 | PKCE</footer>
   </body>
 </html>
