--- a/src/m2m/frontend/index.html
+++ b/src/m2m/frontend/index.html
@@ -151,14 +151,14 @@
       <label for="client-secret">Client Secret:</label>
       <input type="password" id="client-secret" />
 
-      <button type="submit">🔐 Authorize</button>
+      <button type="submit">Authorize</button>
     </form>
 
     <div class="button-group" id="actions">
-      <button id="refresh-btn">🔄 Refresh Token</button>
-      <button id="call-api-btn">🔐 Call Protected API</button>
+      <button id="refresh-btn">Refresh Token</button>
+      <button id="call-api-btn">Call Protected API</button>
       <button id="clear-btn" class="danger" style="display: none">
-        🧹 Clear Tokens
+        Clear Tokens
       </button>
     </div>
 
@@ -174,7 +174,7 @@
 
     <pre id="result-box" style="display: none"></pre>
 
-    <footer>Client Credentials Grant — Robb-e OAuth2 Demo</footer>
+    <footer>Robb-e OAuth2 Demo</footer>
 
     <script src="/m2m/m2m-main.js" type="module"></script>
   </body>
