Feature: Serverless Application client secret authentication (#3)
* chore: move user logic to the separate folder

* chore: prepare config for new oauth flow

* feat: m2m auth flow (wip)

* feat: add home page & add input fields

* feat: auth flow for client (wip)

* feat: m2m oauth flow with tokens payloads

* feat: call protected api with access token after auth

* feat: update readme to include m2m flow

* fix: some things in readme

--- a/src/user/frontend/index.html
+++ b/src/user/frontend/index.html
@@ -51,6 +51,6 @@
     <h1>Robb-e OAuth2 Demo</h1>
     <button id="login-btn">Log in with Robb-e</button>
     <pre id="output" style="display: none"></pre>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="user-main.js"></script>
   </body>
 </html>
